fix: calcular ocupacion promedio en reportes con fin.plusDays(1)